# UnitreeGoGait

./: .gitignore  README.md  bezier.py  gait.py
custom_gait/: CMakeLists.txt  README.md  package.xml  unitree.repos
custom_gait/config/: gait.rviz  set_gait.yaml
custom_gait/launch/: custom_gait.launch.py  gait.launch.xml
custom_gait/src/: custom_gait.cpp
gaitlib/: CMakeLists.txt  README.md
gaitlib/include/gaitlib/: gaits.hpp
gaitlib/src/: gaits.cpp
gaitlib/tests/: tests.cpp
python_testing/: README.md  analyze_high_cmd.py  analyze_high_state.py  bezier.py  custom_stand_sit.txt  gait.py  high_stand_sit.txt  myCurve.txt  pd_controls.py  plotCurve.py
