<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_gait</name>
  <version>0.0.0</version>
  <description>Custom gaits for Unitree Go1 Robot</description>
  <maintainer email="katiereeshughes@gmail.com">Katie Hughes</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <depend>rclcpp</depend>
  <depend>ros2_unitree_legged_msgs</depend>
  <depend>gaitlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
